Change log for zeit.web
=======================

2.75 (unreleased)
-----------------

- ZON-3025: Change Wording on several places

- MAINT: Unify framebuilder banner_channel for ZON+ZCO

- MAINT: Configure grunt watch task dynamically

- FIX: Fix teaser layout, default ZCO article layout


- FIX: Correct link


2.74 (2016-04-26)
-----------------

- ZON-2973: Generalise usage of cardstack in CPs and articles

- ZON-2987: Add servicelinks module to ZEIT Campus

- ZON-3003: ZEIT Campus polishing

- ZON-3005: Share date logic for teasers between ZON and ZCO

- ZON-2972: Introduce ZEIT Campus teasers in ZON parquet

- ZON-2948: ZEIT Campus article header image landscape

- ZON-2497: Add missing elements to centerpage of centerpages

- ZON-2943: Move sharing tools to core and include them in Campus articles

- ZON-2896: Add tracking ids to ZMO and ZCO navigation

- ZON-2991: Fix links in ZCO navigation

- ZON-2997: Support pagination for campus centerpages

- MAINT: Adjust tracking IDs in article footer

- BUG-405: Do not use duplicate IDs for infoboxes

- FIX: Fix more Button in mobile navigation and add testing


2.73 (2016-04-21)
-----------------

- ZON-2962: Polish ZEIT Campus

- ZON-2983: Include meetrics in ZEIT Campus

- ZON-2920: Add Advertorial Logic and Styles to Campus

- ZON-2975: Add ZEIT Campus page title suffix

- ZON-2986: Activate ad reloading in Campus

- ZON-2994: Change servicebox XML format to include actual columns
  !! production uses /data/servicebox-zon.xml now instead of /data/servicebox.xml !!

- OPS-282: Erase some HTML validation errors

- MAINT: Speed up appserver start by not loading unnecessary zope ZCML

- BUG-384: Place first ad after min 100 words in facebook instantarticles

- FIX: Transmit email properly to rawr


2.72 (2016-04-18)
-----------------

- HOTFIX: Add a bit more teaser margin for zmo-landscape-large

- ZON-2499: Campus CP-Header

- ZON-2942: Use ZON/core metadata for dates etc. in Campus
