@@ -19,3 +19,5 @@
 {% block pagination_button %}
     Mehr ZEIT Campus
 {% endblock %}
+
+{%block pagination_link %}{{ request.route_url('home-campus') }}index{% endblock %}
